# practical_crypto

./: Cargo.toml  LICENSE  NIST.FIPS.180-4.pdf:Zone.Identifier  README.md
benches/: bench_encrypt.rs  bookchapter.txt
src/: aes.rs  consts.rs  lib.rs  sha256.rs
